--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "next": "13.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/gapi": "^0.0.43",
+    "@types/gapi.client.gmail": "^1.0.4",
+    "@types/google.accounts": "^0.0.4",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "next": "13.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   }
 }
