feat: implement provider for web3 and google auth

--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@solana/web3.js": "^1.73.3",
+    "@web3auth/base": "^4.6.0",
+    "@web3auth/core": "^4.6.0",
+    "@web3auth/openlogin-adapter": "^4.6.0",
+    "canvas": "^2.11.0",
+    "googleapis": "^110.0.0",
+    "linkedom": "^0.14.21",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
