--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "version": 2,
     "builds": [
-      { "src": "/", "use": "@vercel/node@18.9.0" }
+      { "use": "@vercel/node@18.9.0" }
     ]
   }
   
